build(docker): add frontend dockerfile

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,3 +4,10 @@
     build:
       context: ./backend
       dockerfile: Dockerfile
+  frontend:
+    image: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - 3000:3000
