--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,5 +1,6 @@
 {
   "plugins": ["prettier-plugin-tailwindcss"],
   "singleQuote": true,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "semi": false
 }
