refactor: save audio to cloudinary

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BaseUrl": "http://localhost:5211"
+  "BaseUrl": "http://localhost:5211",
+  "GoogleApi": {
+    "GeminiKey": "",
+    "TextToSpeechKey": ""
+  },
+  "AssemblyAi": {
+    "ApiKey": ""
+  },
+  "CloudinaryUrl": ""
 }
