--- a/backend/AiShortsGenerator.csproj
+++ b/backend/AiShortsGenerator.csproj
@@ -8,14 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AssemblyAI" Version="1.2.0" />
+        <PackageReference Include="CloudinaryDotNet" Version="1.27.1" />
         <PackageReference Include="Google.Cloud.TextToSpeech.V1" Version="3.9.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
