feat: generate ai images (#13)
closes #13

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -13,5 +13,9 @@
   "AssemblyAi": {
     "ApiKey": ""
   },
-  "CloudinaryUrl": ""
+  "CloudinaryUrl": "",
+  "Cloudflare": {
+    "ApiKey": "",
+    "AccountId": ""
+  }
 }
