--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,12 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@remotion/cli": "^4.0.243",
+    "@remotion/lambda": "4.0.243",
     "@remotion/player": "^4.0.243",
-    "@remotion/renderer": "^4.0.243",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "inngest": "^3.28.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
