docs: add new the environment variable (#27)
add new the environment variable required to delete video on Remotion `deleteRender` function

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_API_URL=http://localhost:5211
 REMOTION_AWS_ACCESS_KEY_ID=
 REMOTION_AWS_SECRET_ACCESS_KEY=
 REMOTION_AWS_SERVE_URL=
+REMOTION_AWS_BUCKET_NAME=
